--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ SQLAlchemy==1.3.18
 Werkzeug==1.0.1
 WTForms==2.3.1
 WTForms-SQLAlchemy==0.2
+Flask-SQLAlchemy==2.4.4
+SQLAlchemy==1.3.18
+WTForms-SQLAlchemy==0.2
